--- a/src/application/views/rooms.html
+++ b/src/application/views/rooms.html
@@ -7,8 +7,8 @@
         <header>
             <div id="menu">
                 <ul>
-                    <li><a href="">Sair</a></li>
-                    <li><a href="">Meus Dados</a></li>
+                    <li><form action="/logout/" method="delete"><input type="submit" value="Sair"></form></li>
+                    <li><form action="/accont" method="GET"><input type="submit" value="Meus Dados"></form></li>
                 </ul>
             </div>
         </header>
